Prevent headers forcing whitespace

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -189,6 +189,7 @@ section {
     background-size: contain;
     background-repeat: no-repeat;
     h1 {
+      word-wrap: break-word;
         @include mobile {
             padding: 0 0 0 $mobile-content-padding;
         }
